# rasterizer

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README  README.animgui  README.files  README.md  README.org
examples/: README.samples  sample2.obs  sample2.ppm  sample3.ppm  sample4.fli  sample7.obs  sampleB.obs  sampleG.obs  sampleJ.obs  sampleK.obs
rasterizer.xcodeproj/: project.pbxproj
rasterizer.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
samples/: README.samples  dom.obs  heart.obs  obh.obs  obl.obs  ode.obs  ofc.obs  ogl.obs  okr.obs  osi.obs  otr.obs  s5.obs  sample1.obs  sample3.obs  sample4.obs  sample5.obs  sample8.obs  sampleA.flc  sampleC.flc  sampleI.obs  sampleP.obs  sampleQ.obs  sq3s.obs  ulitka.flc  vase.obs
samples/examples/: sample1.fli  sample5.fli
src/: Makefile  animgui.cpp  canvas.cpp  canvas.h  canvas.hpp  control.cpp  control.h  editor.cpp  editor.h  main.cpp  objects.cpp  objects.h  objects.hpp  observer.h  polygon.cpp  polygon.h  rasterizer.cpp  rasterizer.h  scene.cpp  scene.h  viewer.cpp  viewer.h
tests/: rasterizer_unittest.cpp
xcode/rasterizer.xcodeproj/: project.pbxproj
